# quotes

./: Cargo.toml  README.md
quote_client/: Cargo.toml
quote_client/src/: args.rs  main.rs  sender.rs
quote_client/src/model/: mod.rs  quote.rs
quote_common/: Cargo.toml
quote_common/src/: command.rs  error.rs  lib.rs  net.rs  quote.rs  result.rs  tickers.rs
quote_server/: Cargo.toml
quote_server/src/: main.rs  receiver.rs  udp_listener.rs
quote_server/src/model/: mod.rs  ping_monitor.rs  quote.rs  quote_generator.rs
