[workspace]
members = [
    "quote_server",
    "quote_client",
    "quote_common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
#bincode = "2.0.1"
chrono = "0.4.42"
thiserror = "2"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
crossbeam-channel = "0.5.15"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
