[package]
name = "quote_client"
version.workspace = true
edition.workspace = true

[dependencies]
quote_common = { path = "../quote_common" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
rand =  "0.9"
log = { workspace = true }
env_logger = { workspace = true }
chrono = "0.4.42"
thiserror = "2.0.17"
strum = { version = "0.27", features = ["derive"] }
ctrlc = "3"